fixes header & container alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,6 +46,7 @@ p {
     padding: 13px;
     border-left: none;
     border-top: none;
+    height: 71px;
 
 }
 
@@ -54,8 +55,10 @@ p {
     border-color: #dddddd;
     border-style: inset;
     border-width: 1px;
-    padding: 8px;
-    padding-bottom: 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    height: 71px;
     border-right: none;
     border-top: none;
 
@@ -71,13 +74,44 @@ h1, .h1 {
     font-family: "Georgia", Times, "Times New Roman", serif;
 }
 
+h1 {
+    margin-left: 20px;
+}
+
+.h1 {
+    padding-top: 12px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    height: 71px;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-left: 73px;
+}
+
 p {
     line-height: 2;
+    margin-left: 15px;
 }
 
 a {
     color: #777777;
-    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif; 
+    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+    border-right: 1px solid #777777;
+    margin-top: 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+.nav-link {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+.no-border {
+    border: none;
+    margin-right: 73px;
 }
 
 .container {
@@ -85,7 +119,7 @@ a {
     border-color: #dddddd;
     border-style: inset;
     border-width: 1px;
-    margin: 40px auto;
+    margin: 40px auto 40px 75px;
     width: 680px;
 }
 
@@ -95,6 +129,8 @@ a {
 
 .profile-pic {
     float: left;
+    margin-left: 15px;
+    margin-right: 20px;
 }
 
 .about-me {
